Azizbek Khabibullayev lesson 16 is finishid    😎

--- a/prictice/index.html
+++ b/prictice/index.html
@@ -13,5 +13,6 @@
     </h1>
     <button onclick="print_page()">Print</button>
     <script src="./print.js"></script>
+    <script src="./object.js"></script>
 </body>
 </html>
