--- a/prictice/index.html
+++ b/prictice/index.html
@@ -11,8 +11,11 @@
     <h1>
         Asadulloh Ruziev
     </h1>
-    <button onclick="print_page()">Print</button>
+
+    <button class="btn"> button</button>
+    <script src="./beforeReact.js"></script>
+    <!-- <button onclick="print_page()">Print</button>
     <script src="./print.js"></script>
-    <script src="./object.js"></script>
+    <script src="./object.js"></script> -->
 </body>
 </html>
