--- a/prictice/index.html
+++ b/prictice/index.html
@@ -12,10 +12,30 @@
         Asadulloh Ruziev
     </h1>
 
-    <button class="btn"> button</button>
-    <script src="./beforeReact.js"></script>
-    <!-- <button onclick="print_page()">Print</button>
-    <script src="./print.js"></script>
-    <script src="./object.js"></script> -->
+
+
+
+
+
+
+    <!-- localStorage -->
+    <script src="./localStorage.js"></script>
+
+
+
+    <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- <button class="btn"> button</button> -->
+    <!-- <script src="./beforeReact.js"></script> -->
+
+
+    <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- <button onclick="print_page()">Print</button>-->
+    <!-- <script src="./print.js"></script> -->
+
+
+    <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- <script src="./object.js"></script> -->
+
+
 </body>
 </html>
