--- a/prictice/index.html
+++ b/prictice/index.html
@@ -18,9 +18,16 @@
 
 
 
-    <!-- localStorage -->
-    <script src="./localStorage.js"></script>
 
+    
+    <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- Methods -->
+    <script src="./methods.js"></script>
+
+
+    <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- localStorage -->
+    <!-- <script src="./localStorage.js"></script> -->
 
 
     <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
