--- a/prictice/index.html
+++ b/prictice/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="https://www.nhm.ac.uk/content/dam/nhmwww/discover/camel-adaptations/dromedary-camel-face-full-width.jpg.thumb.1160.1160.jpg" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
@@ -11,18 +12,21 @@
     <h1>
         Asadulloh Ruziev
     </h1>
+    
 
 
 
 
 
-
+    <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- Spreed vs Rest -->
+    <script src="./spreadRest.js"></script>
 
 
     
     <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
     <!-- Methods -->
-    <script src="./methods.js"></script>
+    <!-- <script src="./methods.js"></script> -->
 
 
     <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
