--- a/prictice/index.html
+++ b/prictice/index.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="shortcut icon" href="https://www.nhm.ac.uk/content/dam/nhmwww/discover/camel-adaptations/dromedary-camel-face-full-width.jpg.thumb.1160.1160.jpg" type="image/x-icon">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      href="https://www.nhm.ac.uk/content/dam/nhmwww/discover/camel-adaptations/dromedary-camel-face-full-width.jpg.thumb.1160.1160.jpg"
+      type="image/x-icon"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Print</title>
-</head>
-<body>
-    <h1>
-        Asadulloh Ruziev
-    </h1>
-    
+  </head>
+  <body>
+    <h1>Asadulloh Ruziev</h1>
 
 
+       <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- Spreed vs Rest -->
+    <script src="./json.js"></script>
 
-
+       <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- Spreed vs Rest -->
+    <!-- <script src="./api.js"></script> -->
 
     <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
     <!-- Spreed vs Rest -->
-    <script src="./spreadRest.js"></script>
+    <!-- <script src="./templateLiterals.js"></script> -->
 
+    <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- Spreed vs Rest -->
+    <!-- <script src="./string.js"></script> -->
 
-    
+    <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- Spreed vs Rest -->
+    <script src="./demo.js"></script>
+
+    <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
+    <!-- Spreed vs Rest -->
+    <!-- <script src="./spreadRest.js"></script> -->
+
     <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
     <!-- Methods -->
     <!-- <script src="./methods.js"></script> -->
-
 
     <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
     <!-- localStorage -->
     <!-- <script src="./localStorage.js"></script> -->
 
-
     <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
     <!-- <button class="btn"> button</button> -->
     <!-- <script src="./beforeReact.js"></script> -->
-
 
     <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
     <!-- <button onclick="print_page()">Print</button>-->
     <!-- <script src="./print.js"></script> -->
 
-
     <!-- 🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗🌗 -->
     <!-- <script src="./object.js"></script> -->
-
-
-</body>
+  </body>
 </html>
